--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    color: white;
 }
 
 .container {
@@ -13,6 +14,5 @@ body {
     backdrop-filter: blur(19px) saturate(180%);
     border-radius: 20px;
     display: flex;
-    align-items: center;
     justify-content: space-between;
 }
