--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -1,3 +1,88 @@
 .chat {
     flex: 3;
+    border-left: 1px solid #dddddd35;
+    border-right: 1px solid #dddddd35;
+    height: 100%;
+    .top {
+        padding: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-bottom: 1px solid #dddddd35;
+        .user {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            img {
+                height: 50px;
+                width: 50px;
+                object-fit: cover;
+                border-radius: 50%;
+            }
+            .texts {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                gap: 5px;
+                span {
+                    font-size: 18px;
+                    font-weight: bold;
+                }
+                p {
+                    font-size: 14px;
+                    font-weight: 300;
+                    color: #dddddd35;
+                    margin: 0;
+                }
+            }
+        }
+        .icons {
+            display: flex;
+            gap: 10px;
+        }
+        img {
+            width: 20px;
+            height: 20px;
+            cursor: pointer;
+        }
+    }
+    .center {}
+    .bottom {
+        padding: 20px;
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        justify-content: space-between;
+        border-top: 1px solid #dddddd35;
+        img {
+            height: 20px;
+            height: 20px;
+            cursor: pointer;
+        }
+        .icons {
+            display: flex;
+            gap: 20px;
+        }
+        input {
+            flex: 1;
+            outline: none;
+            border: none;
+            /* color: #ffff; */
+            padding: 10px;
+            font-size: 16px;
+            border-radius: 10px;
+        }
+        .sendBtn {
+            background-color: #5183fe;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            ;
+        }
+        .imojidiv {
+            position: sticky;
+        }
+    }
 }
