--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -1,8 +1,10 @@
 .chat {
-    flex: 3;
+    flex: 2;
     border-left: 1px solid #dddddd35;
     border-right: 1px solid #dddddd35;
     height: 100%;
+    display: flex;
+    flex-direction: column;
     .top {
         padding: 20px;
         display: flex;
@@ -46,12 +48,60 @@
             cursor: pointer;
         }
     }
-    .center {}
+    .center {
+        padding: 5px;
+        display: flex;
+        flex-direction: column;
+        overflow-y: scroll;
+        gap: 20px;
+        .message {
+            max-width: 70%;
+            display: flex;
+            gap: 15px;
+            &.own {
+                align-self: flex-end;
+                .texts {
+                    p {
+                        color: tomato;
+                        background-color: floralwhite;
+                    }
+                }
+            }
+            img {
+                height: 30px;
+                width: 30px;
+                object-fit: cover;
+                border-radius: 50%;
+            }
+            .texts {
+                flex: 1;
+                display: flex;
+                flex-direction: column;
+                gap: 5px;
+                img {
+                    width: 100%;
+                    height: 300px;
+                    border-radius: 10px;
+                    object-fit: cover;
+                }
+                p {
+                    padding: 20px;
+                    background-color: rgba(17, 25, 40, 0.3);
+                    border-radius: 10px;
+                    margin-bottom: 0px;
+                }
+            }
+            span {
+                font-size: 12px;
+            }
+        }
+    }
     .bottom {
         padding: 20px;
         display: flex;
         align-items: center;
         gap: 20px;
+        margin-top: auto;
         justify-content: space-between;
         border-top: 1px solid #dddddd35;
         img {
@@ -71,6 +121,14 @@
             padding: 10px;
             font-size: 16px;
             border-radius: 10px;
+        }
+        .emoji {
+            position: relative;
+            .picker {
+                position: absolute;
+                bottom: 50px;
+                left: 0;
+            }
         }
         .sendBtn {
             background-color: #5183fe;
