--- a/src/components/details/details.css
+++ b/src/components/details/details.css
@@ -1,3 +1,93 @@
 .details {
     flex: 1;
+    .user {
+        padding: 20px 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-bottom: 1px solid #dddddd35;
+        img {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+        p {
+            margin: 0
+        }
+        h2 {
+            margin: 5px;
+        }
+    }
+    .info {
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        .option {
+            .title {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                img {
+                    width: 15p0x;
+                    height: 15px;
+                    background-color: rgba(17, 25, 40, 0.3);
+                    padding: 10px;
+                    border-radius: 50%;
+                    cursor: pointer;
+                }
+            }
+            .photos {
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                margin-top: 20px;
+                .photoItem {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    .photoDetail {
+                        display: flex;
+                        align-items: center;
+                        gap: 20px;
+                        img {
+                            width: 30px;
+                            height: 30px;
+                            border-radius: 5px;
+                            object-fit: cover;
+                        }
+                        span {
+                            font-size: 14px;
+                            color: lightgray;
+                            font-weight: 300;
+                        }
+                    }
+                    .icon {
+                        width: 15px;
+                        height: 15px;
+                        background-color: rgba(17, 25, 40, 0.3);
+                        padding: 10px;
+                        border-radius: 50%;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+        button {
+            padding: 15px;
+            background-color: rgba(230, 74, 105, 0.553);
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            &:hover {
+                background-color: rgba(220, 20, 60, 0.796);
+            }
+            &.logout {
+                padding: 10px;
+                background-color: #1a73e8;
+            }
+        }
+    }
 }
